<resources>
    <string name="app_name">YelpApp</string>
    <string name="search_term">search term: </string>
    <string name="search_term_hint">please enter search term</string>
    <string name="search_location">search location: </string>
    <string name="search_location_hint">please enter a location</string>
    <string name="search_sort">sort by: </string>
    <string name="sort_option">choose a sort option</string>
    <string name="search_button">search</string>

    <string-array name="sort_arrays">
        <item>best_match</item>
        <item>rating</item>
        <item>review_count</item>
        <item>distance</item>
    </string-array>

    <string name="restaurant_name">Restaurant name: </string>
    <string name="restaurant_location">Restaurant location: </string>
    <string name="restaurant_phone">Phone number: </string>
    <string name="restaurant_review">Review: </string>

    <string name="back">back</string>

</resources>